Tue Oct 22 22:15:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/cspublic.h include/sybdb.h include/tds.h
	  include/tdsutil.h src/apps/tsql.c src/ctlib/ct.c
	  src/ctlib/unittests/Makefile.am src/ctlib/unittests/t0004.c
	  src/ctlib/unittests/t0009.c (added) src/dblib/bcp.c src/dblib/dblib.c
	  src/dblib/unittests/Makefile.am src/dblib/unittests/t0023.c (added)
	  src/odbc/odbc.c src/tds/login.c src/tds/mem.c src/tds/token.c
	  src/tds/unittests/t0002.c src/tds/unittests/t0004.c
	  src/tds/unittests/t0005.c src/tds/unittests/t0006.c:
	- Merge Bill Thompson's infamous patch to add compute row support.
	  With several changes/bug fixes/hacks of my own, so blame me first.
	  Still needs some cleanup, there are some warnings that need
	  to be fixed, and Freddy has some issues he wants to fix.

Tue Oct 22 11:30:10 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/.cvsignore:
	- Ignore generated freetds_sysconfdir.h

Tue Oct 22 10:57:04 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/bkpublic.h include/cspublic.h
	  src/ctlib/blk.c:
	- Provide stubs for all blk-library routines.

Mon Oct 21 21:39:44 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: 
	- fix compilation problem on SonOS (from Bill patch)

Sun Oct 20 01:22:46 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/tds.h src/dblib/dblib.c src/tds/token.c:
	- Implement dbspid().

Sat Oct 19 14:03:40 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tdsver.h.in:
	- CVS Header -> CVS Id.

Sat Oct 19 14:02:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tdsstring.h:
	- Add CVS Id.

Fri Oct 18 22:20:15 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* apps/freebcp.h
	  apps/tsql.c
	  dblib/unittests/t0019.c
	  odbc/unittests/common.c
	  odbc/unittests/common.h
	  odbc/unittests/t0001.c
	  odbc/unittests/t0002.c
	  odbc/unittests/t0003.c
	  odbc/unittests/t0004.c
	  odbc/connectparams.c